vlib/v/checker/tests/int_ptr_array_index_decl_assign_err.vv
pub fn read_int(bytes []u8, mut offset &int) int {
	offset_d := offset
	return bytes[offset_d]
}
